# Phoenix

./: .gitignore  00_bootstrap.bat  01_install_vcpkg_libs.bat  01_update_vcpkg_libs.bat  02_install_third_party_libs.ps1  02_run_cmake.bat  03_pack_release.bat  03_run_cmake.bat  04_pack_release.bat  CMakeLists.txt  LICENSE  README.md  bootstrap.bat  bootstrap1.bat  bootstrap2.ps1  bootstrap3.bat  cmake.bat  cmake_vs2017_v15.bat  install_third_party_libs.ps1  install_vcpkg_libs.bat  update_vcpkg_libs.bat
Editor/: CMakeLists.txt
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/src/: Libs.h  Main.h  SpzDeclare.h  libs.h  main.h
Engine/src/core/: DemoKernel.cpp  DemoKernel.h  Demokernel.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Section.cpp  Section.h  SectionManager.cpp  SectionManager.h  Window.cpp  Window.h  demokernel.cpp
Engine/src/core/data/: SectionVariableInfo.cpp  SectionVariableInfo.h
Engine/src/core/drivers/: BassDriver.cpp  BassDriver.h  Events.h  GLContext.cpp  GLContext.h  GLDriver.cpp  GLDriver.h  ImGuiDriver.cpp  ImGuiDriver.h  MathDriver.cpp  MathDriver.h  NetDriver.cpp  NetDriver.h  events.h  gldriver.cpp  gldriver.h  imGuidriver.cpp  imGuidriver.h
Engine/src/core/drivers/net/: dyad.c
Engine/src/core/events/: DemoKernelEvent.h  Event.h  KeyEvent.h  MouseEvent.h  SectionEvent.cpp  SectionEvent.h  SectionEventManager.cpp  SectionEventManager.h
Engine/src/core/input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Engine/src/core/layers/: ImGuiLayer.cpp  ImGuiLayer.h  SectionLayer.cpp  SectionLayer.h
Engine/src/core/platform/windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/src/core/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CameraTypes.cpp  CameraTypes.h  Cubemap.cpp  Cubemap.h  Fbo.cpp  Fbo.h  FboManager.cpp  FboManager.h  Font.cpp  Font.h  Light.cpp  LightManager.cpp  LightManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelManager.cpp  ModelManager.h  ParticleMesh.cpp  ParticleMesh.h  ParticleMeshEx.cpp  ParticleMeshEx.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemCore.cpp  ParticleSystemCore.h  ParticleSystemEx.cpp  ParticleSystemEx.h  Shader.cpp  (+17 more)
Engine/src/core/resource/: Resource.cpp  Resource.h
Engine/src/core/scripting/: SpoReader.cpp  SpoReader.h
Engine/src/core/sound/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  Spectrogram.cpp  Spectrogram.h
Engine/src/core/utils/: Logger.cpp  Logger.h  LoggerDeclarations.h  Utilities.cpp  Utils.cpp  Utils.h
Engine/src/debug/: Instrumentor.h
Engine/src/sections/: cameraAbs.cpp  cameraAbsSection.cpp  cameraFPS.cpp  cameraFPSAbsolute.cpp  cameraSection.cpp  cameraTarget.cpp  cameraTargetSection.cpp  drawEmitterScene.cpp  drawEmitterSceneEx.cpp  drawEmitterSpline.cpp  drawEmitters.cpp  drawFbo.cpp  drawFbo2.cpp  drawImage.cpp  drawImageFbo.cpp  drawParticles.cpp  drawParticlesFbo.cpp  drawParticlesImage.cpp  drawParticlesScene.cpp  drawQuad.cpp  drawScene.cpp  drawSceneMatrix.cpp  drawSceneMatrixFolder.cpp  drawSceneMatrixInstanced.cpp  drawSceneMatrixInstancedFolder.cpp  drawSkybox.cpp  drawVideo.cpp  efxAccum.cpp  efxBloom.cpp  efxBlur.cpp  efxFader.cpp  efxMotionBlur.cpp  fbobind.cpp  fbounbind.cpp  lightsection.cpp  loading.cpp  secSound.cpp  sections.h  setExpression.cpp  setVariable.cpp  (+4 more)
Launcher/: CMakeLists.txt
Launcher/data/config/: control.spo  loader.spo
Launcher/data/pool/models/cube/: cube.lwo  lightingWithVelocity.glsl  lightsBlinnPhong.glsl  normalmapping.glsl  normalmapping_orig.glsl
Launcher/data/pool/shaders/drawEmitterScene/: billboard.glsl
Launcher/data/pool/shaders/drawParticlesScene/: drawParticlesScene.glsl
Launcher/data/pool/shaders/edgedetector/: edgedetector.glsl
Launcher/data/pool/shaders/hatching/: hatching.glsl
Launcher/data/pool/shaders/raymatching/: raymatching.glsl
Launcher/data/pool/shaders/shadowmapping/: shadowmapping_depth.glsl
Launcher/data/pool/shaders/video_shaders/: ascii.glsl  displace_channels.glsl
Launcher/data/resources/shaders/basic/: ObjColor.glsl  QuadTexVFlipModel.glsl
Launcher/data/resources/shaders/sections/: drawFbo2-electroscopia.glsl  drawFbo2.glsl  drawImage3D.glsl  drawQuad.glsl  drawVideo.glsl  efxBloom_blur.glsl
Launcher/src/: main.cpp
Phoenix/: 00_bootstrap.bat  01_install_vcpkg_libs.bat  01_update_vcpkg_libs.bat  02_install_third_party_libs.ps1  03_run_cmake.bat  04_pack_release.bat  CMakeLists.txt
Phoenix/data/config/: graphics.spo
Phoenix/data/pool/models/cube/: lightingWithFilter.glsl  (+1 more)
Phoenix/res/: icon.rc
Phoenix/src/: main.cpp  main.h
Phoenix/src/core/: Demokernel.h  SectionManager.cpp  SectionManager.h  demokernel.cpp  section.cpp  section.h
Phoenix/src/core/drivers/: BassDriver.h  MathDriver.cpp  MathDriver.h  NetDriver.cpp  events.h  gldriver.cpp  gldriver.h  imGuidriver.cpp  imGuidriver.h
Phoenix/src/core/renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Fbo.cpp  Fbo.h  FboManager.cpp  FboManager.h  Font.cpp  Font.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ModelManager.cpp  ModelManager.h  ParticleMesh.cpp  ParticleSystem.cpp  ParticleSystem.h  Shader.cpp  Shader.h  ShaderManager.h  ShaderVars.cpp  ShaderVars.h  Spline.cpp  Spline.h  TextureManager.h  Video.cpp  Video.h  VideoManager.cpp  (+2 more)
Phoenix/src/core/resource/: Resource.cpp
Phoenix/src/core/scripting/: SpoReader.cpp
Phoenix/src/core/utils/: Logger.h  Utilities.h
Phoenix/src/sections/: cameraAbsSection.cpp  cameraSection.cpp  drawEmitterScene.cpp  drawEmitters.cpp  drawFbo.cpp  drawImage.cpp  drawParticles.cpp  drawParticlesImage.cpp  drawParticlesScene.cpp  drawScene.cpp  drawSceneMatrix.cpp  drawSceneMatrixInstanced.cpp  drawSkybox.cpp  drawVideo.cpp  efxAccum.cpp  efxBloom.cpp  efxBlur.cpp  efxFader.cpp  efxMotionBlur.cpp  fbobind.cpp  fbounbind.cpp  lightsection.cpp  loading.cpp  sound.cpp  sph.cpp  sph.hpp  test.cpp
cmake/: FindGLFW3.cmake  (+2 more)
(+339 files in other folders)
